--- a/index.html
+++ b/index.html
@@ -9,45 +9,41 @@
 </head>
 <body>
 
-  <div class="masthead">
+  <header role="banner" class="masthead">
     <h1>
-      <img src="images/logo.svg">
+      <img src="images/logo.svg" alt="Logo of representing and anchor">
       <span>Arrrgene’s Treasure Tours</span>
     </h1>
-    <div class="nav" role="navigation">
+    <nav class="nav" role="navigation">
       <ul>
         <li><a href="#">Tours</a></li>
         <li><a href="#">Ships</a></li>
         <li><a href="#">Tickets</a></li>
       </ul>
-    </div>
-  </div>
+    </nav>
+  </header>
 
-  <div role="main">
+  <main role="main">
 
-    <div class="banner">
-      <img src="images/banner.jpg">
-      <div>
+    <article class="banner">
+      <img src="images/banner.jpg" alt="Background of a map">
+      <section class="banner">
         <h2>Ahoy, me Hearties!</h2>
         <p>Batten down the hatches and sail me corsair to plentiful doubloons.</p>
         <a href="#">Book a tour</a>
-      </div>
-    </div>
-
+      </section>
+    </article>
     <div class="ship">
-      <div class="card">
-        <img src="images/ship.svg">
+      <section class="card">
+        <img src="images/ship.svg" alt="A silhouette of a ship">
         <h2>Heave Ho!</h2>
         <p>Weigh anchor and hoist the mizzen, ya old salt, aboard shipshape <i>Arrrgonaut</i>.</p>
         <a href="#">See the specs</a>
-      </div>
+      </section>
     </div>
-
-  </div>
-
-  <div class="footer">
+  </main>
+  <footer role="contentinfo">
     <p>© Arrrgene’s Treasure Tours</p>
-  </div>
-
+  </footer>
 </body>
 </html>
