--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
   <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400,400i,700" rel="stylesheet">
 </head>
 <body>
-
-  <header role="banner" class="masthead">
+  <header class="masthead" role="banner">
     <h1>
-      <img src="images/logo.svg" alt="Logo of representing and anchor">
+      <img src="images/logo.svg" alt="Arrrgene's Treasure Tours">
       <span>Arrrgene’s Treasure Tours</span>
     </h1>
     <nav class="nav" role="navigation">
@@ -22,27 +21,27 @@
       </ul>
     </nav>
   </header>
-
   <main role="main">
 
-    <article class="banner">
-      <img src="images/banner.jpg" alt="Background of a map">
-      <section class="banner">
+    <section class="banner">
+      <img src="images/banner.jpg" alt="The banner">
+      <img src="images/banner.jpg" alt="This is the banner of the website">
+      <div>
         <h2>Ahoy, me Hearties!</h2>
         <p>Batten down the hatches and sail me corsair to plentiful doubloons.</p>
         <a href="#">Book a tour</a>
-      </section>
-    </article>
-    <div class="ship">
-      <section class="card">
-        <img src="images/ship.svg" alt="A silhouette of a ship">
+      </div>
+    </section>
+    <article class="ship">
+      <div class="card">
+        <img src="images/ship.svg" alt="An image of a ship">
         <h2>Heave Ho!</h2>
         <p>Weigh anchor and hoist the mizzen, ya old salt, aboard shipshape <i>Arrrgonaut</i>.</p>
         <a href="#">See the specs</a>
-      </section>
-    </div>
+      </div>
+    </article>
   </main>
-  <footer role="contentinfo">
+  <footer class="footer" role="contentinfo">
     <p>© Arrrgene’s Treasure Tours</p>
   </footer>
 </body>
