--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400,400i,700" rel="stylesheet">
 </head>
 <body>
-  <header class="masthead" role="banner">
+  <header role="banner" class="masthead">
     <h1>
-      <img src="images/logo.svg" alt="Arrrgene's Treasure Tours">
+      <img src="images/logo.svg" alt="Logo of the company, with an anchor and a ribbon in front of it">
       <span>Arrrgene’s Treasure Tours</span>
     </h1>
     <nav class="nav" role="navigation">
@@ -23,25 +23,26 @@
   </header>
   <main role="main">
 
-    <section class="banner">
-      <img src="images/banner.jpg" alt="The banner">
-      <img src="images/banner.jpg" alt="This is the banner of the website">
-      <div>
+    <div class="banner">
+      <img src="images/banner.jpg" alt="Displays a section of an old version of the world map in brown colour">
+      <section>
         <h2>Ahoy, me Hearties!</h2>
         <p>Batten down the hatches and sail me corsair to plentiful doubloons.</p>
         <a href="#">Book a tour</a>
-      </div>
-    </section>
-    <article class="ship">
-      <div class="card">
-        <img src="images/ship.svg" alt="An image of a ship">
+      </section>
+    </div>
+
+    <div class="ship">
+      <aside class="card">
+        <img src="images/ship.svg" alt="Image of a brown caravel with two sails and a large hull">
         <h2>Heave Ho!</h2>
         <p>Weigh anchor and hoist the mizzen, ya old salt, aboard shipshape <i>Arrrgonaut</i>.</p>
         <a href="#">See the specs</a>
-      </div>
-    </article>
+      </aside>
+    </div>
+
   </main>
-  <footer class="footer" role="contentinfo">
+  <footer role="contentinfo" class="footer">
     <p>© Arrrgene’s Treasure Tours</p>
   </footer>
 </body>
