--- a/index.html
+++ b/index.html
@@ -8,42 +8,37 @@
   <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400,400i,700" rel="stylesheet">
 </head>
 <body>
-  <header role="banner" class="masthead">
-    <h1>
-      <img src="images/logo.svg" alt="Logo of the company, with an anchor and a ribbon in front of it">
-      <span>Arrrgene’s Treasure Tours</span>
-    </h1>
-    <nav class="nav" role="navigation">
-      <ul>
-        <li><a href="#">Tours</a></li>
-        <li><a href="#">Ships</a></li>
-        <li><a href="#">Tickets</a></li>
-      </ul>
-    </nav>
-  </header>
-  <main role="main">
-
-    <div class="banner">
-      <img src="images/banner.jpg" alt="Displays a section of an old version of the world map in brown colour">
-      <section>
-        <h2>Ahoy, me Hearties!</h2>
-        <p>Batten down the hatches and sail me corsair to plentiful doubloons.</p>
-        <a href="#">Book a tour</a>
+  <header class="masthead" role="banner">
+   <h1>
+     <nav class="nav" role="navigation">
+     <ul>
+       <li><a href="#">Tours</a></li>
+       <li><a href="#">Ships</a></li>
+       <li><a href="#">Tickets</a></li>
+     </ul>
+   </nav>
+</header>
+ <main role="main">
+   <section class="banner">
+     <img src="images/banner.jpg" alt="World Map">
+     <div>
+       <h2>Ahoy, me Hearties!</h2>
+       <p>Batten down the hatches and sail me corsair to plentiful doubloons.</p>
+       <a href="#">Book a tour</a>
+     </div>
       </section>
-    </div>
+      <section class="ship">
+     <div class="card">
+       <img src="images/ship.svg" alt="Pirate Ship">
+       <h2>Heave Ho!</h2>
+       <p>Weigh anchor and hoist the mizzen, ya old salt, aboard shipshape <i>Arrrgonaut</i>.</p>
+       <a href="#">See the specs</a>
+     </div>
+   </section>
+</main>
+<footer class="footer" role="contentinfo">
+   <p>© Arrrgene’s Treasure Tours</p>
+ </footer>
 
-    <div class="ship">
-      <aside class="card">
-        <img src="images/ship.svg" alt="Image of a brown caravel with two sails and a large hull">
-        <h2>Heave Ho!</h2>
-        <p>Weigh anchor and hoist the mizzen, ya old salt, aboard shipshape <i>Arrrgonaut</i>.</p>
-        <a href="#">See the specs</a>
-      </aside>
-    </div>
-
-  </main>
-  <footer role="contentinfo" class="footer">
-    <p>© Arrrgene’s Treasure Tours</p>
-  </footer>
 </body>
 </html>
