--- a/index.html
+++ b/index.html
@@ -8,37 +8,42 @@
   <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400,400i,700" rel="stylesheet">
 </head>
 <body>
-  <header class="masthead" role="banner">
-   <h1>
-     <nav class="nav" role="navigation">
-     <ul>
-       <li><a href="#">Tours</a></li>
-       <li><a href="#">Ships</a></li>
-       <li><a href="#">Tickets</a></li>
-     </ul>
-   </nav>
-</header>
- <main role="main">
-   <section class="banner">
-     <img src="images/banner.jpg" alt="World Map">
-     <div>
-       <h2>Ahoy, me Hearties!</h2>
-       <p>Batten down the hatches and sail me corsair to plentiful doubloons.</p>
-       <a href="#">Book a tour</a>
-     </div>
-      </section>
-      <section class="ship">
-     <div class="card">
-       <img src="images/ship.svg" alt="Pirate Ship">
-       <h2>Heave Ho!</h2>
-       <p>Weigh anchor and hoist the mizzen, ya old salt, aboard shipshape <i>Arrrgonaut</i>.</p>
-       <a href="#">See the specs</a>
-     </div>
-   </section>
-</main>
-<footer class="footer" role="contentinfo">
-   <p>© Arrrgene’s Treasure Tours</p>
- </footer>
 
+  <header role="banner" class="masthead">
+    <h1>
+      <img src="images/logo.svg" alt="Logo of representing and anchor">
+      <span>Arrrgene’s Treasure Tours</span>
+    </h1>
+    <nav class="nav" role="navigation">
+      <ul>
+        <li><a href="#">Tours</a></li>
+        <li><a href="#">Ships</a></li>
+        <li><a href="#">Tickets</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main role="main">
+
+    <article class="banner">
+      <img src="images/banner.jpg" alt="Background of a map">
+      <section class="banner">
+        <h2>Ahoy, me Hearties!</h2>
+        <p>Batten down the hatches and sail me corsair to plentiful doubloons.</p>
+        <a href="#">Book a tour</a>
+      </section>
+    </article>
+    <div class="ship">
+      <section class="card">
+        <img src="images/ship.svg" alt="A silhouette of a ship">
+        <h2>Heave Ho!</h2>
+        <p>Weigh anchor and hoist the mizzen, ya old salt, aboard shipshape <i>Arrrgonaut</i>.</p>
+        <a href="#">See the specs</a>
+      </section>
+    </div>
+  </main>
+  <footer role="contentinfo">
+    <p>© Arrrgene’s Treasure Tours</p>
+  </footer>
 </body>
 </html>
